# python-games

./: .gitignore  pyproject.toml  setup.cfg
build_scripts/: build.py  lint.py  test.py  type.py
src/: hello.py  int_list_generator.py  language_features.py  merge_sort.py  merge_sort_test.py  multiprocess_games.py  sorter.py
tests/: test_language_features.py  test_language_features_no_type.py  test_merge_sort.py
